# hello-world

OracleProc/: Makefile  ctx_local.pc  ctx_shared.pc  hello.pc
libpq-client/: Makefile  cursor.c  hello.c  meson.build  simple_query.c
web-component/: hello-world.js  index.html
